--- a/src/main/resources/com/example/appgestionrutaparada/vistas/menuPrincipalV.fxml
+++ b/src/main/resources/com/example/appgestionrutaparada/vistas/menuPrincipalV.fxml
@@ -4,25 +4,17 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.appgestionrutaparada.Controlador.MenuPController">
+<AnchorPane prefHeight="741.0" prefWidth="1143.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.appgestionrutaparada.Controlador.MenuPController">
    <children>
-      <AnchorPane prefHeight="727.0" prefWidth="1140.0" style="-fx-background-color: #404258;">
+      <AnchorPane prefHeight="747.0" prefWidth="1143.0" style="-fx-background-color: #404258;">
          <children>
-            <HBox prefHeight="41.0" prefWidth="1165.0" style="-fx-background-color: #37353E;">
-               <children>
-                  <Label contentDisplay="CENTER" prefHeight="39.0" prefWidth="351.0" text="     Sistema de Gestión Rutas y Paradas" textFill="#f4f2f2">
-                     <font>
-                        <Font name="Arial Bold" size="18.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <Pane id="pnlMeni z x c v s g" layoutX="24.0" layoutY="55.0" prefHeight="644.0" prefWidth="321.0" style="-fx-background-color: #474E68;">
+            <Pane id="pnlMeni z x c v s g" layoutX="25.0" layoutY="79.0" prefHeight="644.0" prefWidth="321.0" style="-fx-background-color: #474E68;">
                <children>
                   <Pane prefHeight="52.0" prefWidth="321.0" style="-fx-background-color: #37353E;">
                      <children>
@@ -61,9 +53,71 @@
                   <Button id="btnGestionarParada" fx:id="btnGestionarParada" layoutX="52.0" layoutY="536.0" mnemonicParsing="false" onAction="#AbrirGestionParada" prefHeight="41.0" prefWidth="197.0" style="-fx-background-color: #0275d8;" text="Gestionar Paradas" textFill="WHITE" />
                   <Button id="btnGestionarRuta" fx:id="btnGestionarRuta" layoutX="53.0" layoutY="589.0" mnemonicParsing="false" onAction="#AbrirGestionRuta" prefHeight="41.0" prefWidth="197.0" style="-fx-background-color: #0275d8;" text="Gestionar Rutas" textFill="WHITE" />
                   <Button id="btnCalcularRuta" fx:id="btnCalcularRuta" layoutX="59.0" layoutY="259.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="184.0" style="-fx-background-color: #0275d8;" text="Calcular Ruta" textFill="WHITE" />
+                  <ImageView fitHeight="41.0" fitWidth="35.0" layoutX="67.0" layoutY="592.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Imagenes/ruta.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="28.0" fitWidth="35.0" layoutX="65.0" layoutY="543.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Imagenes/parada.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="21.0" fitWidth="28.0" layoutX="196.0" layoutY="269.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Imagenes/calcular.png" />
+                     </image>
+                  </ImageView>
                </children>
             </Pane>
-            <Pane layoutX="358.0" layoutY="55.0" prefHeight="644.0" prefWidth="789.0" style="-fx-background-color: #474E68;" />
+            <Pane layoutX="359.0" layoutY="79.0" prefHeight="495.0" prefWidth="783.0" style="-fx-background-color: #474E68;" />
+            <Pane layoutX="359.0" layoutY="591.0" prefHeight="131.0" prefWidth="235.0" style="-fx-background-color: #50577A;">
+               <children>
+                  <Label layoutX="14.0" layoutY="14.0" prefHeight="20.0" prefWidth="103.0" text="Rutas Activas" textFill="#fffbfb">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="28.0" fitWidth="35.0" layoutX="115.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Imagenes/paradaActiva.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Pane layoutX="615.0" layoutY="591.0" prefHeight="131.0" prefWidth="235.0" style="-fx-background-color: #50577A;">
+               <children>
+                  <Label layoutX="11.0" layoutY="13.0" prefHeight="20.0" prefWidth="103.0" text="Paradas Activas" textFill="#fffbfb">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="28.0" fitWidth="35.0" layoutX="128.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Imagenes/rutaActiva.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Pane layoutX="-6.0" prefHeight="52.0" prefWidth="1149.0" style="-fx-background-color: #37353E;">
+               <children>
+                  <Label contentDisplay="CENTER" layoutX="41.0" layoutY="6.0" prefHeight="39.0" prefWidth="124.0" text="     GeoParada" textFill="#f4f2f2">
+                     <font>
+                        <Font name="Arial Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label contentDisplay="CENTER" layoutX="165.0" layoutY="6.0" prefHeight="39.0" prefWidth="442.0" text=" Sistema de Gestión de Rutas y Paradas" textFill="#f4f2f2">
+                     <font>
+                        <Font name="Arial Bold Italic" size="16.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="28.0" fitWidth="35.0" layoutX="34.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Imagenes/logo.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
          </children>
       </AnchorPane>
    </children>
